[project]
name = "perp-dex-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.8.0",
    "asyncio==4.0.0",
    "bpx-py==2.0.11",
    "cryptography>=41.0.0",
    "ecdsa>=0.17.0",
    "edgex-python-sdk",
    "lighter-sdk",
    "pycryptodome>=3.15.0",
    "pydantic>=1.8.0",
    "python-dotenv>=1.0.0",
    "pytz>=2025.2",
    "requests==2.32.5",
    "tenacity>=9.1.2",
    "websocket-client>=1.6.0",
    "websockets>=12.0",
]

[tool.uv.sources]
edgex-python-sdk = { git = "https://github.com/your-quantguy/edgex-python-sdk.git", rev = "07425f7522be5845399264682580c88019ab9e52" }
lighter-sdk = { git = "https://github.com/elliottech/lighter-python.git" }
